--- a/week_7/examples/day1/package.json
+++ b/week_7/examples/day1/package.json
@@ -8,7 +8,8 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": { 
+    "nodemon": "nodemon",
     "cors": "^2.8.5",
     "express": "^4.17.1"
   }
