--- a/week_8/day1/classwork/server/package.json
+++ b/week_8/day1/classwork/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "env": "0.0.2",
     "express": "^4.17.1",
+    "express-es6-template-engine": "^2.2.3",
     "nodemon": "nodemon",
     "pg": "^8.6.0"
   }
